--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,12 @@ name = "pylint-deprecated-decorator"
 version = "0.2.0"
 description = "A pylint checker to detect @deprecated decorators on classes and functions"
 authors = ["withakay <jack@fader.co.uk>"]
+homepage = "https://github.com/withakay/pylint-deprecated-decorator#readme"
+repository = "https://github.com/withakay/pylint-deprecated-decorator"
 
 packages = [
     { include = "deprecated_decorator" },
+    { include = "README.md" },
 ]
 
 [tool.poetry.dependencies]
